Cql/Cql.Grammar/r2/cqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from cql.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Hl7.Cql.CqlToElm.Grammar.r2 {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class cqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, DATE=51, DATETIME=52, 
		TIME=53, IDENTIFIER=54, QUOTEDIDENTIFIER=55, DELIMITEDIDENTIFIER=56, STRING=57, 
		NUMBER=58, WS=59, COMMENT=60, LINE_COMMENT=61;
	public const int
		RULE_modelDefinitions = 0, RULE_model = 1, RULE_modelDefinition = 2, RULE_modelUri = 3, 
		RULE_typeDefinition = 4, RULE_literalTypeDefinition = 5, RULE_classTypeDefinition = 6, 
		RULE_classElements = 7, RULE_classElement = 8, RULE_baseType = 9, RULE_baseTypeSpecifier = 10, 
		RULE_genericTypeDefinition = 11, RULE_genericArguments = 12, RULE_genericTypeConstraint = 13, 
		RULE_libraryDefinitions = 14, RULE_library = 15, RULE_libraryDefinition = 16, 
		RULE_usingDefinition = 17, RULE_includeDefinition = 18, RULE_localIdentifier = 19, 
		RULE_accessModifier = 20, RULE_parameterDefinition = 21, RULE_codesystemDefinition = 22, 
		RULE_valuesetDefinition = 23, RULE_codesystems = 24, RULE_codesystemIdentifier = 25, 
		RULE_libraryIdentifier = 26, RULE_codeDefinition = 27, RULE_conceptDefinition = 28, 
		RULE_qualifiedIdentifier = 29, RULE_identifier = 30, RULE_keywordIdentifier = 31, 
		RULE_codeIdentifier = 32, RULE_codesystemId = 33, RULE_valuesetId = 34, 
		RULE_versionSpecifier = 35, RULE_codeId = 36, RULE_displayClause = 37, 
		RULE_typeSpecifier = 38, RULE_choiceTypeSpecifier = 39, RULE_tupleTypeSpecifier = 40, 
		RULE_tupleElementDefinition = 41, RULE_namedTypeSpecifier = 42, RULE_genericTypeSpecifier = 43, 
		RULE_expression = 44, RULE_functionInvocation = 45, RULE_returnClause = 46, 
		RULE_binaryOperator = 47, RULE_literal = 48, RULE_quantity = 49, RULE_quantityValue = 50, 
		RULE_unit = 51;
	public static readonly string[] ruleNames = {
		"modelDefinitions", "model", "modelDefinition", "modelUri", "typeDefinition", 
		"literalTypeDefinition", "classTypeDefinition", "classElements", "classElement", 
		"baseType", "baseTypeSpecifier", "genericTypeDefinition", "genericArguments", 
		"genericTypeConstraint", "libraryDefinitions", "library", "libraryDefinition", 
		"usingDefinition", "includeDefinition", "localIdentifier", "accessModifier", 
		"parameterDefinition", "codesystemDefinition", "valuesetDefinition", "codesystems", 
		"codesystemIdentifier", "libraryIdentifier", "codeDefinition", "conceptDefinition", 
		"qualifiedIdentifier", "identifier", "keywordIdentifier", "codeIdentifier", 
		"codesystemId", "valuesetId", "versionSpecifier", "codeId", "displayClause", 
		"typeSpecifier", "choiceTypeSpecifier", "tupleTypeSpecifier", "tupleElementDefinition", 
		"namedTypeSpecifier", "genericTypeSpecifier", "expression", "functionInvocation", 
		"returnClause", "binaryOperator", "literal", "quantity", "quantityValue", 
		"unit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'model'", "'version'", "':'", "'define'", "'literal'", "'type'", 
		"'{'", "'}'", "','", "'extends'", "'generic'", "'<'", "'>'", "'where'", 
		"'is'", "'library'", "'using'", "'called'", "'include'", "'public'", "'private'", 
		"'parameter'", "'default'", "'codesystem'", "'valueset'", "'codesystems'", 
		"'.'", "'code'", "'from'", "'concept'", "'display'", "'Choice'", "'Tuple'", 
		"'('", "')'", "'returns'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'!='", 
		"'<='", "'>='", "'and'", "'or'", "'null'", "'true'", "'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "DATE", "DATETIME", "TIME", "IDENTIFIER", "QUOTEDIDENTIFIER", 
		"DELIMITEDIDENTIFIER", "STRING", "NUMBER", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "cql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static cqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public cqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public cqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ModelDefinitionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsingDefinitionContext usingDefinition() {
			return GetRuleContext<UsingDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDefinitionContext typeDefinition() {
			return GetRuleContext<TypeDefinitionContext>(0);
		}
		public ModelDefinitionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelDefinitions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterModelDefinitions(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitModelDefinitions(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelDefinitions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelDefinitionsContext modelDefinitions() {
		ModelDefinitionsContext _localctx = new ModelDefinitionsContext(Context, State);
		EnterRule(_localctx, 0, RULE_modelDefinitions);
		try {
			State = 106;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__16:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104;
				usingDefinition();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 105;
				typeDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModelDefinitionContext modelDefinition() {
			return GetRuleContext<ModelDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(cqlParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ModelDefinitionsContext[] modelDefinitions() {
			return GetRuleContexts<ModelDefinitionsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModelDefinitionsContext modelDefinitions(int i) {
			return GetRuleContext<ModelDefinitionsContext>(i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_model; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterModel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitModel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModel(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelContext model() {
		ModelContext _localctx = new ModelContext(Context, State);
		EnterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			modelDefinition();
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3 || _la==T__16) {
				{
				{
				State = 109;
				modelDefinitions();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 115;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIdentifierContext qualifiedIdentifier() {
			return GetRuleContext<QualifiedIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VersionSpecifierContext versionSpecifier() {
			return GetRuleContext<VersionSpecifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModelUriContext modelUri() {
			return GetRuleContext<ModelUriContext>(0);
		}
		public ModelDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterModelDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitModelDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelDefinitionContext modelDefinition() {
		ModelDefinitionContext _localctx = new ModelDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_modelDefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(T__0);
			State = 118;
			qualifiedIdentifier();
			State = 119;
			Match(T__1);
			State = 120;
			versionSpecifier();
			State = 121;
			Match(T__2);
			State = 122;
			modelUri();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModelUriContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(cqlParser.STRING, 0); }
		public ModelUriContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modelUri; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterModelUri(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitModelUri(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelUri(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModelUriContext modelUri() {
		ModelUriContext _localctx = new ModelUriContext(Context, State);
		EnterRule(_localctx, 6, RULE_modelUri);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LiteralTypeDefinitionContext literalTypeDefinition() {
			return GetRuleContext<LiteralTypeDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassTypeDefinitionContext classTypeDefinition() {
			return GetRuleContext<ClassTypeDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GenericTypeDefinitionContext genericTypeDefinition() {
			return GetRuleContext<GenericTypeDefinitionContext>(0);
		}
		public TypeDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefinitionContext typeDefinition() {
		TypeDefinitionContext _localctx = new TypeDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_typeDefinition);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 126;
				literalTypeDefinition();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 127;
				classTypeDefinition();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 128;
				genericTypeDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralTypeDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AccessModifierContext accessModifier() {
			return GetRuleContext<AccessModifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BaseTypeContext baseType() {
			return GetRuleContext<BaseTypeContext>(0);
		}
		public LiteralTypeDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literalTypeDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterLiteralTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitLiteralTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteralTypeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LiteralTypeDefinitionContext literalTypeDefinition() {
		LiteralTypeDefinitionContext _localctx = new LiteralTypeDefinitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_literalTypeDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			Match(T__3);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__19 || _la==T__20) {
				{
				State = 132;
				accessModifier();
				}
			}

			State = 135;
			Match(T__4);
			State = 136;
			Match(T__5);
			State = 137;
			identifier();
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 138;
				baseType();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassTypeDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AccessModifierContext accessModifier() {
			return GetRuleContext<AccessModifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BaseTypeContext baseType() {
			return GetRuleContext<BaseTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassElementsContext classElements() {
			return GetRuleContext<ClassElementsContext>(0);
		}
		public ClassTypeDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classTypeDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterClassTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitClassTypeDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassTypeDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassTypeDefinitionContext classTypeDefinition() {
		ClassTypeDefinitionContext _localctx = new ClassTypeDefinitionContext(Context, State);
		EnterRule(_localctx, 12, RULE_classTypeDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(T__3);
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__19 || _la==T__20) {
				{
				State = 142;
				accessModifier();
				}
			}

			State = 145;
			Match(T__5);
			State = 146;
			identifier();
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__9) {
				{
				State = 147;
				baseType();
				}
			}

			State = 150;
			Match(T__6);
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 126100791982292996L) != 0)) {
				{
				State = 151;
				classElements();
				}
			}

			State = 154;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassElementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ClassElementContext[] classElement() {
			return GetRuleContexts<ClassElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassElementContext classElement(int i) {
			return GetRuleContext<ClassElementContext>(i);
		}
		public ClassElementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classElements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterClassElements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitClassElements(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassElements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassElementsContext classElements() {
		ClassElementsContext _localctx = new ClassElementsContext(Context, State);
		EnterRule(_localctx, 14, RULE_classElements);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			classElement();
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 157;
				Match(T__8);
				State = 158;
				classElement();
				}
				}
				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ClassElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterClassElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitClassElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IcqlVisitor<TResult> typedVisitor = visitor as IcqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassElement(this);
			else return visitor.VisitChildren(this);
		}
	}
